fix view profile and fix create survey and fix view pulished survey